--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,41 @@
+# Hugely inspired by work of @marocchino in https://github.com/marocchino/on_artifact
 ---
 
-name: 'Your name here'
+name: Download Artifact
 
-description: 'Provide a description here'
+description: A GitHub Action to download a single artifact from a workflow run.
 
-author: 'Your name or organization here'
+author: Jan Macků <jamacku@redhat.com>
 
 inputs:
-  milliseconds: # change this
+  name:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: Name of artifact.
+  path:
+    required: false
+    description: Downloaded artifact archive will be extracted to this destination. Default is artifact name.
+  remove-archive:
+    required: false
+    default: 'true'
+    description: Remove downloaded artifact archive.
+  remove-extracted-files:
+    required: false
+    default: 'true'
+    description: Remove extracted artifact content. It will be still accessible by Action outputs.
+  delete-artifact:
+    required: false
+    default: 'false'
+    description: Delete downloaded artifact from GitHub.
+  run-id:
+    required: false
+    default: ${{ github.event.workflow_run.id }}
+    description: 'set workflow_run id, This defaults to {{ github.event.workflow_run.id }}'
+  token:
+    required: false
+    default: ${{ github.token }}
+    description: GitHub token used access GitHub API.
+
+# Outputs are dynamically assigned and their names are inherited from file names of extracted artifact archive.
 
 runs:
   using: 'node16'
