--- a/.github/workflows/download-pullrequest-metadata.yml
+++ b/.github/workflows/download-pullrequest-metadata.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 jobs:
-  freezer:
+  download:
     if: >
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success'
@@ -21,6 +21,9 @@ jobs:
       contents: write
 
     steps:
+      - name: Repository checkout
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+
       - name: Download Pull Request Metadata artifact
         uses: ./
         with:
