--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "5.59.9",
     "@vercel/ncc": "0.36.1",
     "@vitest/coverage-c8": "0.31.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "eslint": "8.40.0",
     "eslint-plugin-prettier": "4.2.1",
     "js-yaml": "4.1.0",
