--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "@actions/core": "1.10.0",
     "@actions/exec": "^1.1.1",
-    "@octokit/rest": "19.0.11",
-    "class-validator": "^0.14.0"
+    "@octokit/rest": "19.0.11"
   },
   "devDependencies": {
     "@actions/github": "5.1.1",
