--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "license": "MIT",
   "packageManager": "yarn@3.5.0",
   "dependencies": {
-    "@actions/core": "1.10.0",
+    "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@octokit/rest": "19.0.11"
+    "@octokit/rest": "19.0.11",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@actions/github": "5.1.1",
