--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "license": "MIT",
   "packageManager": "yarn@3.5.0",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/exec": "^1.1.1",
+    "@actions/core": "1.10.0",
+    "@actions/exec": "1.1.1",
     "@octokit/rest": "19.0.11",
-    "zod": "^3.21.4"
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@actions/github": "5.1.1",
@@ -37,11 +37,10 @@
     "@typescript-eslint/parser": "5.59.9",
     "@vercel/ncc": "0.36.1",
     "@vitest/coverage-c8": "0.32.0",
-    "@vitest/coverage-v8": "^0.32.0",
+    "@vitest/coverage-v8": "0.32.0",
     "eslint": "8.40.0",
     "eslint-plugin-prettier": "4.2.1",
-    "js-yaml": "4.1.0",
-    "nock": "13.3.1",
+    "fetch-mock": "9.11.0",
     "prettier": "2.8.8",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
