--- a/package.json
+++ b/package.json
@@ -25,25 +25,24 @@
   "license": "MIT",
   "packageManager": "yarn@3.5.0",
   "dependencies": {
-    "@actions/core": "1.10.0",
-    "@actions/exec": "1.1.1",
-    "@octokit/rest": "19.0.13",
-    "zod": "3.21.4"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@octokit/rest": "^20.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@actions/github": "5.1.1",
-    "@types/node": "18.16.18",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
-    "@vercel/ncc": "0.36.1",
-    "@vitest/coverage-c8": "0.32.2",
-    "@vitest/coverage-v8": "0.32.2",
-    "eslint": "8.43.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "fetch-mock": "9.11.0",
-    "prettier": "2.8.8",
-    "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "vitest": "0.32.2"
+    "@actions/github": "^5.1.1",
+    "@types/node": "^20.8.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vercel/ncc": "^0.38.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.51.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "fetch-mock": "^9.11.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   }
 }
