--- a/.github/workflows/download-pullrequest-metadata.yml
+++ b/.github/workflows/download-pullrequest-metadata.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Repository checkout
-        uses: actions/checkout@f095bcc56b7c2baf48f3ac70d6d6782f4f553222
+        uses: actions/checkout@v4
 
       - name: Download Pull Request Metadata artifact
         uses: ./
