build: drop Node.js 16 and add Node.js 20

--- a/action.yml
+++ b/action.yml
@@ -39,7 +39,7 @@ inputs:
 # Outputs are dynamically assigned and their names are inherited from file names of extracted artifact archive.
 
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: node20
+  main: dist/index.js
 
 ...
