--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "vitest run --coverage",
     "update-snapshots": "vitest run --update",
-    "all": "yarn run build && yarn run format && yarn run lint && yarn run package && yarn test"
+    "all": "yarn run build && yarn run format && yarn run package && yarn test"
   },
   "repository": {
     "type": "git",
@@ -33,12 +32,8 @@
   "devDependencies": {
     "@actions/github": "^5.1.1",
     "@types/node": "^20.8.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
     "@vercel/ncc": "^0.38.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.51.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "fetch-mock": "^9.11.0",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
