--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   "license": "MIT",
   "packageManager": "yarn@4.2.2",
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1",
-    "@octokit/rest": "^20.0.2",
-    "zod": "^3.22.4"
+    "@actions/core": "1.10.1",
+    "@actions/exec": "1.1.1",
+    "@octokit/rest": "20.1.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@actions/github": "^5.1.1",
-    "@types/node": "^20.8.4",
-    "@vercel/ncc": "^0.38.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "fetch-mock": "^9.11.0",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "@actions/github": "6.0.0",
+    "@types/node": "20.12.11",
+    "@vercel/ncc": "0.38.1",
+    "@vitest/coverage-v8": "1.6.0",
+    "fetch-mock": "9.11.0",
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.5",
+    "vitest": "1.6.0"
   }
 }
