--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
-    "package": "ncc build --source-map --license licenses.txt",
+    "package": "esbuild --bundle --platform=node --outfile=dist/main.js src/main.ts",
     "test": "vitest run --coverage",
     "update-snapshots": "vitest run --update",
     "all": "yarn run build && yarn run format && yarn run package && yarn test"
@@ -32,8 +32,8 @@
   "devDependencies": {
     "@actions/github": "6.0.0",
     "@types/node": "22.7.9",
-    "@vercel/ncc": "0.38.2",
     "@vitest/coverage-v8": "2.1.3",
+    "esbuild": "^0.24.0",
     "prettier": "3.3.3",
     "ts-node": "10.9.2",
     "typescript": "5.6.3",
